@@ -18,8 +18,9 @@ import me.szumielxd.portfel.proxy.api.objects.ProxyScheduler;
 import me.szumielxd.portfel.proxy.api.objects.ProxySender;
 import me.szumielxd.portfel.proxy.api.objects.ProxyServer;
 import me.szumielxd.portfel.velocity.PortfelVelocityImpl;
+import net.kyori.adventure.text.Component;
 
-public class VelocityProxy implements CommonProxy {
+public class VelocityProxy implements CommonProxy<Component> {
 	
 	
 	private final @NotNull PortfelVelocityImpl plugin;
@@ -33,39 +34,51 @@ public class VelocityProxy implements CommonProxy {
 	
 
 	@Override
-	public @Nullable ProxyPlayer getPlayer(@NotNull UUID uuid) {
-		return this.plugin.getProxy().getPlayer(uuid).map(p -> new VelocityPlayer(this.plugin, p)).orElse(null);
+	public @Nullable VelocityPlayer getPlayer(@NotNull UUID uuid) {
+		return this.plugin.getProxy().getPlayer(uuid)
+				.map(p -> new VelocityPlayer(this.plugin, p))
+				.orElse(null);
 	}
 
 	@Override
-	public @Nullable ProxyPlayer getPlayer(@NotNull String name) {
-		return this.plugin.getProxy().getPlayer(name).map(p -> new VelocityPlayer(this.plugin, p)).orElse(null);
+	public @Nullable VelocityPlayer getPlayer(@NotNull String name) {
+		return this.plugin.getProxy().getPlayer(name)
+				.map(p -> new VelocityPlayer(this.plugin, p))
+				.orElse(null);
 	}
 
 	@Override
-	public @NotNull Collection<ProxyPlayer> getPlayers() {
-		return this.plugin.getProxy().getAllPlayers().parallelStream().map(p -> new VelocityPlayer(this.plugin, p)).collect(Collectors.toList());
+	public @NotNull Collection<VelocityPlayer> getPlayers() {
+		return this.plugin.getProxy().getAllPlayers().parallelStream()
+				.map(p -> new VelocityPlayer(this.plugin, p))
+				.toList();
 	}
 
 	@Override
-	public @NotNull Optional<Collection<ProxyPlayer>> getPlayers(@NotNull String serverName) {
+	public @NotNull Optional<Collection<? extends ProxyPlayer<Component>>> getPlayers(@NotNull String serverName) {
 		return this.plugin.getProxy().getServer(Objects.requireNonNull(serverName, "serverName cannot be null"))
 				.map(RegisteredServer::getPlayersConnected)
-				.map(list -> list.parallelStream().map(p -> new VelocityPlayer(this.plugin, p)).collect(Collectors.toList()));
+				.map(list -> list.parallelStream()
+						.map(p -> new VelocityPlayer(this.plugin, p))
+						.toList());
 	}
 	
 	@Override
-	public @NotNull Map<String, ProxyServer> getServers() {
-		return this.plugin.getProxy().getAllServers().parallelStream().collect(Collectors.toMap(s -> s.getServerInfo().getName(), s -> new VelocityServer(this.plugin, s)));
+	public @NotNull Map<String, VelocityServer> getServers() {
+		return this.plugin.getProxy().getAllServers().parallelStream()
+				.collect(Collectors.toMap(
+						s -> s.getServerInfo().getName(),
+						s -> new VelocityServer(this.plugin, s)));
 	}
 	
 	@Override
-	public @NotNull Optional<ProxyServer> getServer(@NotNull String serverName) {
-		return this.plugin.getProxy().getServer(serverName).map(s -> new VelocityServer(this.plugin, s));
+	public @NotNull Optional<ProxyServer<Component>> getServer(@NotNull String serverName) {
+		return this.plugin.getProxy().getServer(serverName)
+				.map(s -> new VelocityServer(this.plugin, s));
 	}
 	
 	@Override
-	public @NotNull ProxySender getConsole() {
+	public @NotNull ProxySender<Component> getConsole() {
 		return VelocitySender.wrap(this.plugin, this.plugin.getProxy().getConsoleCommandSource());
 	}
 	
