@@ -2,32 +2,29 @@ package me.szumielxd.portfel.velocity.objects;
 
 import java.net.SocketAddress;
 import java.util.Collection;
-import java.util.Objects;
-import java.util.stream.Collectors;
 
 import org.jetbrains.annotations.NotNull;
+
 import com.velocitypowered.api.proxy.server.RegisteredServer;
 
-import me.szumielxd.portfel.proxy.api.objects.ProxyPlayer;
+import lombok.AllArgsConstructor;
 import me.szumielxd.portfel.proxy.api.objects.ProxyServer;
 import me.szumielxd.portfel.velocity.PortfelVelocityImpl;
+import net.kyori.adventure.text.Component;
 
-public class VelocityServer implements ProxyServer {
+@AllArgsConstructor
+public class VelocityServer implements ProxyServer<Component> {
 	
 	
 	private final @NotNull PortfelVelocityImpl plugin;
 	private final @NotNull RegisteredServer server;
 	
-	
-	public VelocityServer(@NotNull PortfelVelocityImpl plugin, @NotNull RegisteredServer server) {
-		this.plugin = Objects.requireNonNull(plugin, "plugin cannot be null");
-		this.server = Objects.requireNonNull(server, "server cannot be null");
-	}
-	
 
 	@Override
-	public @NotNull Collection<ProxyPlayer> getPlayers() {
-		return this.server.getPlayersConnected().parallelStream().map(p -> new VelocityPlayer(this.plugin, p)).collect(Collectors.toList());
+	public @NotNull Collection<VelocityPlayer> getPlayers() {
+		return this.server.getPlayersConnected().parallelStream()
+				.map(p -> new VelocityPlayer(this.plugin, p))
+				.toList();
 	}
 
 	@Override
